# ITU-T-Downloader

./: .gitignore  Justfile  LICENSE  README.md  codec-recommendations.txt  itu_downloader.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_itu_downloader.py
