[project]
name = "itu-downloader"
version = "0.1.0"
description = "Archive ITU-T test signals and publications with a deterministic folder layout."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[project.optional-dependencies]
runtime = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "rich>=13.0",
]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingModuleSource = false
reportMissingImports = false  # optional deps not always installed

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
